kube/web-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: fyi
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: fyi
          image: "docker-registry.restr.im:5000/fyi/web:latest"
          command: ["/usr/app/fyi"]
          ports:
            - containerPort: 5000
