kube/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: fyi
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: web
